# fcitx-handwriting

./: CMakeLists.txt
im/: handwriting.c
src/: handwrite.c  stroke.c  stroke.h
